<?xml version="1.0"?>
<package>
  <name>sdr_odom_publisher</name>
  <version>0.0.0</version>
  <description>The sdr_odom_publisher package</description>

  <maintainer email="sdr@todo.todo">sdr</maintainer>
  <license>BSD</license>

  <author email="sdr@example.com">sdr</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <!--<run_depend>libpcl-all-dev</run_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
