<?xml version="1.0"?>
<package format="2">
  <name>sensor_pkg</name>
  <version>0.0.0</version>
  <description>The sensor_pkg package</description>

  <!-- package for Launch file to run all sensor nodes -->
  
  <maintainer email="gurmok93@gmail.com">yoon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>mpu6050</exec_depend>
  <exec_depend>rosserial</exec_depend>
  <exec_depend>ydlidar_ros</exec_depend>
  <exec_depend>sdr_odom_publisher</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
